--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="./index.css">
+    <link rel="stylesheet" type="text/css" href="./svg_preview.css">
     <link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/ui-lightness/jquery-ui.css">
     <link href="node_modules/evol-colorpicker/css/evol-colorpicker.css" rel="stylesheet" type="text/css">
     <title>SVG Viewer</title>
@@ -18,7 +18,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="node_modules/evol-colorpicker/js/evol-colorpicker.min.js" type="text/javascript" charset="utf-8"></script>
-    <script type="text/javascript" src="./index.js"></script>
+    <script type="text/javascript" src="./svg_preview.js"></script>
 
 </body>
 </html>
